# parsentry_deprecated

./: Cargo.toml  build.rs  call_graph.json  parsentry.toml  vulnerable_sample.py
.trae/documents/: 将AI调用统一为async-openai并移除环境变量与全面本地化的重构计划.md
.trae/rules/: project_rules.md
docs/: ADD_NEW_LANGUAGE.md
docs/concepts/: analysis_flow.md
docs/website/src/app/docs/: page.tsx
src/: analyzer.rs  config.rs  lib.rs  main.rs  parser.rs  pattern_generator.rs  repo.rs  response.rs
src/ai/: client.rs  error.rs  mod.rs  models.rs
src/cli/: args.rs
src/cli/commands/: graph.rs  scan.rs
src/locales/: mod.rs  zh.rs
src/reports/: markdown.rs
test_audit/: test_vulnerable.py
tests/: README.md  main_unit_test.rs  prompts_unit_test.rs  response_unit_test.rs  security_patterns_unit_test.rs
